src/test/deca/syntax/invalid/ineq_ineq_invalid_syntax.deca
// Description : 
// 
//      Test syntaxiquement incorrect qui ne reconnait pas "=!"
// 
// Resultat : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    =!;
}
